# jw-obs-monitor

./: .gitignore  README.md  jw-obs-monitor.spec  pyproject.toml  requirements.txt  test.py
.github/workflows/: build.yml  test.yml
src/: config.py  detector.py  main.py  obs_controller.py  screen_monitor.py
src/pyinstaller_hooks/: hook-flet-pip-disable.py
src/ui/: __init__.py  app.py  config_store.py  layout.py
src/utils/: image_processing.py
tests/: test_config.py  test_config_store.py  test_detector.py  test_image_processing.py  test_main.py  test_obs_controller.py  test_screen_monitor.py  test_ui_app.py  test_ui_layout.py  test_ui_package.py
