[tool.poetry]
name = "jw-obs-monitor"
version = "0.1.0"
description = "A Python application that monitors the JW Library display and transitions scenes in OBS Studio."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
flet = "0.85.1"
flet-desktop = "0.85.1"
mss = "10.2.0"
numpy = "2.4.5"
obsws-python = "1.8.0"
pillow = "12.2.0"
pywin32 = { version = "311", markers = "sys_platform == 'win32'" }

[tool.poetry.group.dev.dependencies]
pyinstaller = "6.20.0"
pyinstaller-hooks-contrib = "2026.5"
pytest = "9.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
